@@ -230,7 +230,7 @@ CSPad2x2PixSpectra::saveShapeInFile()
 { 
     m_arr_shape_fname = m_arr_fname + ".sha";
     MsgLog(name(), info, "Save the spectral array configuration in file " << m_arr_shape_fname);
-    ofstream file; 
+    std::ofstream file; 
     file.open(m_arr_shape_fname.c_str(), std::ios_base::out);
     file << "NPIXELS  " << m_npix_2x2        << "\n";
     file << "NBINS    " << m_nbins           << "\n";
