@@ -383,7 +383,7 @@ CameraPixSpectra::saveShapeInFile()
 { 
     m_arr_shape_fname = m_arr_fname + ".sha";
     MsgLog(name(), info, "Save the spectral array configuration in file " << m_arr_shape_fname);
-    ofstream file; 
+    std::ofstream file; 
     file.open(m_arr_shape_fname.c_str(), std::ios_base::out);
     file << "NPIXELS  " << m_numPixels       << "\n";
     file << "NBINS    " << m_nbins           << "\n";
